src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CKW Support Process</fullName>
        <description>Process to support CKWs with their questions and needs</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MoTeCH Support Process</fullName>
        <description>Process to support MoTeCH users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Please select a category for the support request based on the content of support</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Phone handset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - CKW Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content  - Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content - CKW Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content - Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer ID Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue from Field Validator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Market Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Farm Inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center - Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTN SIM Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAADS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Person_Owner_Id__c</fullName>
        <description>This is the ID of Owner of the the Person object for this case. It allows us to filter cases on owner (e.g. LAC Cases)</description>
        <formula>Person__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the ID of Owner of the the Person object for this case. It allows us to filter cases on owner (e.g. LAC Cases)</inlineHelpText>
        <label>Person Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person associated with this request</description>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>CKW Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MoTeCH Ghana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEA Ghana</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Current response of support staff on this ticket</description>
        <inlineHelpText>Enter a description here about how the user should address this case</inlineHelpText>
        <label>Response</label>
        <length>16000</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Person__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Person__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>All_New_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Person__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Person__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CKW_Cases_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Person__c</columns>
        <columns>Category__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>CKW Cases Queue</label>
        <queue>CKWCasesQueue</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>MoTeCH_Support_Case</fullName>
        <active>true</active>
        <businessProcess>MoTeCH Support Process</businessProcess>
        <description>Case Record for MoTeCH</description>
        <label>MoTeCH Support Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Case</fullName>
        <active>true</active>
        <businessProcess>CKW Support Process</businessProcess>
        <description>Case to handle CKW questions and request for help</description>
        <label>Support Case</label>
    </recordTypes>
</CustomObject>